--- a/app/views/user/_dept_form.html.erb
+++ b/app/views/user/_dept_form.html.erb
@@ -1,7 +1,6 @@
-<% dept_all=Department.where("(use_type = 'dept' AND dep_id != '17')  OR use_type = 'for_user' ")%>
-<% dept_undergrad=dept_all.select{|d|d.degree==3}.map{|d| [d.ch_name,d.id]}%>
-<% dept_grad=dept_all.select{|d|d.degree==2}.map{|d| [d.ch_name,d.id]}%>
-<%dept=@user.department%>
+<% dept_undergrad=Department.can_majored.undergraduate.map{|d| [d.ch_name,d.id]} %>
+<% dept_grad=Department.can_majored.graduate.map{|d| [d.ch_name,d.id]} %>
+<% dept=@user.department %>
 <%= form_tag "/user/select_dept", class:"form-inline", id:"user_form" do %>
 	<div class="form-group col-md-3">
 	
