--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -8,8 +8,20 @@
 		dept_sel['3']='<%=j options_from_collection_for_select(Department.where(:degree=>3, :use_type=>"dept"),'id','ch_name')%>'
 		dept_sel['2']='<%=j options_from_collection_for_select(Department.where(:degree=>2, :use_type=>"dept"),'id','ch_name')%>'
 		dept_sel['0']='<%=j options_from_collection_for_select(Department.where(:degree=>['0','5']),'id','ch_name')%>'
-		$("#q_course_department_id_eq").html(dept_sel[obj.val()]);
+		
 		$("#q_department_id_eq").html(dept_sel[obj.val()]);
 	}
-
+	function search_by_text(){
+		clean_input($("#dept_div"));
+		clean_input($("#sem_div"));
+		$('#course_detail_search').submit();
+	}
+	function search_by_select(){
+		clean_input($("#text_div"));
+		$('#course_detail_search').submit();
+	}
+	$(document).ready(function(){
+		change_degree($("#degree"));
+		$("#q_department_id_eq").val('<%=@q.department_id_eq%>');
+	});
 </script>
