--- a/app/views/courses/srch_and_schd.html.erb
+++ b/app/views/courses/srch_and_schd.html.erb
@@ -1,71 +1,27 @@
-<% render :partial=>"search_js" %>
-
 <div class="row">
-	
-<!--<div class="col-md-5" style="/*background-color:white;margin-top:50px;*/">-->
-		<div class="tabbable tabs-left col-md-4 col-md-offset-1">
-<!--			
-			<ul class="nav nav-tabs" style="margin-top:50px;">
-			
-				<li class="active"><a href="#a" data-toggle="tab" >查詢</a></li>
-				<li><a href="#b" data-toggle="tab">已選</a></li>  
-				<% if @sem_id==latest_semester.id %>
-				<li><a href="#c" data-toggle="tab">觀察名單</a></li>
-				<% end %>
-				
-			</ul>
--->			
-			<!--<div class="container">-->
-			<div class="tab-content" style="overflow:hidden;">
-			 <div class="tab-pane active" id="a">
-					<div class="panel panel-primary ">
-						<div class="panel-heading">
-							<h4 class="text-center">
-								<button id="has-select-btn" class="btn btn-circle btn-info pull-left" onclick="show_has_select()" style="margin-top: -5px;">
-									<font color="white"><%=fa_icon "check"%></font>
-								</button>	
-								課程查詢
-								<button id="cart-btn" class="btn btn-circle btn-info pull-right" onclick="show_cart();" style="margin-top: -5px;">
-									<font color="white"><%=fa_icon "shopping-cart"%></font>
-								</button>	
-							</h4>
-						</div>
-						<div class="panel-body">
-							<div id="search-form" class="row schedule-search-bar">
-							</div>
-						</div>
+	<div class="tabbable tabs-left col-md-4 col-md-offset-1">
+		<div class="tab-content" style="overflow:hidden;">
+		 <div class="tab-pane active" id="a">
+				<div class="panel panel-primary ">
+					<div class="panel-heading">
+						<h4 class="text-center">
+							<button id="has-select-btn" class="btn btn-circle btn-info pull-left" onclick="show_has_select()" style="margin-top: -5px;">
+								<font color="white"><%=fa_icon "check"%></font>
+							</button>	
+							課程查詢
+							<button id="cart-btn" class="btn btn-circle btn-info pull-right" onclick="show_cart();" style="margin-top: -5px;">
+								<font color="white"><%=fa_icon "shopping-cart"%></font>
+							</button>	
+						</h4>
+					</div>
+					<div class="panel-body">
+						<div id="search-form" class="row schedule-search-bar"></div>
 					</div>
 				</div>
-<!--				
-				<div class="tab-pane" id="b">
-					<div class="panel panel-primary" >
-						<div class="panel-heading" >
-							<h4 class="text-center">已選課程</h4>
-						</div>
-						<div class="panel-body" style="min-height:400px;">
-							<div id="has_seleted_courses"></div>
-						</div>
-					</div>
-				</div>
-			
-				<div class="tab-pane" id="c">
-					<div class="panel panel-primary" >
-						<div class="panel-heading" >
-							<h4 class="text-center">觀察名單</h4>
-						</div>
-						<div class="panel-body" style="min-height:400px;">
-							<div id="shopping_cart_courses"></div>
-						</div>
-					</div>
-				</div>
--->					
 			</div>
-
 		</div>
-		
-	<div class="col-md-6 " id="user_schedule">
-		
 	</div>
+	<div class="col-md-6 " id="user_schedule"></div>
 </div>
 <script>
 
@@ -86,11 +42,11 @@ $(document).ready(function(){
 	
 	$("#search-form").load("/course_details/mini?sem_id=<%=@sem_id%>");//search form
 	<% if current_user %>
-//		$("#has_seleted_courses").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=list");
+
 		$("#user_schedule").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=schd");
 	<% end %>
 	<% if @sem_id==latest_semester.id %>
-	$("#shopping_cart_courses").load("/courses/show_cart");
+		$("#shopping_cart_courses").load("/courses/show_cart");
 	<% end %>
 });
 
