--- a/app/views/courses/user_schedule.html.erb
+++ b/app/views/courses/user_schedule.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="panel panel-primary ">
 			<div class="panel-heading" style="background-color:#4c66a4;">
 				<h4 class="text-center">
@@ -36,11 +34,11 @@
 							<% time_index = time_index+1 %>
 							<% i = 1 %>
 							<%  days.each do |day| %>
-							<%if params[:renderType].to_i==1%>
-								<td id="day_<%=i%>_time_<%=t%>_h" class="schd-slot-empty" ></td>		
-							<%else %>
-								<td id="day_<%=i%>_time_<%=t%>" class="schd-slot-empty pos-relative" ></td>
-							<%end%>
+								<%if params[:renderType].to_i==1%>
+									<td id="day_<%=i%>_time_<%=t%>_h" class="schd-slot-empty" ></td>		
+								<%else %>
+									<td id="day_<%=i%>_time_<%=t%>" class="schd-slot-empty pos-relative" ></td>
+								<%end%>
 								<%i=i+1%>
 							<% end %>
 						</tr>
@@ -134,15 +132,15 @@ function add_time_slot(courses){
 	}//outer for
 }//func
 <%if params[:renderType].to_i != 1%>
-	function del_course(course_id){
-		var id  = <%=j @sem_id.to_s%> ;
+	function del_course(cd_id){
+		
 		$.ajax({
 			type: "GET",
 			dataType: "text",
-  			url: "/courses/del_simu_course" ,
+  			url: "/user/add_course" ,
   			data:{
-  				cid: course_id,
-  				sem_id : id 
+  				cd_id: cd_id,
+  				type : "delete" 
   			},	
   			success: function(result){
   				if(result!=0){
@@ -159,7 +157,8 @@ function add_time_slot(courses){
 							$(row_id).popover('disable');
 						}
 					}	
-  				}else
+  				}
+					else
   					alert("Delete course failed.");
   			}
   		});
