--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -1,5 +1,5 @@
 <script>
-	function add_class(id,addordel,from){
+	function addCourseSimulation(id,addordel,from){
 		var this_row=$("#cd_"+id);
 		var name=this_row.find(".course_name").text();
 		var time=this_row.find(".course_time").text();
@@ -22,11 +22,12 @@
 					//$(row_id).addClass("danger");
 					$(row_id).css("background-color","#FFCECD");
 					conflict=true;
+				//	break ;
 				}
 			}
 		}
 		if(conflict){
-			alert("衝堂囉!");
+			toastr['error']("衝堂囉!");
 		}
 		else{
 			for(var i = 0 ; i < slot_ids.length;i++){
@@ -52,11 +53,12 @@
 			data: {
 				cd_id: cd_id,
 				type: addordel,
-				from :from
+				from: from
 			},
 			success: function(data) {
 				console.log(data);
-				$("#schedule_div").load("/courses/get_user_courses?sem_id=<%=latest_semester.id%>&type=schd");
+				//$("#schedule_div").load("/courses/get_user_courses?sem_id=<%=latest_semester.id%>&type=schd");
+				load_course_table(<%=latest_semester.id%>); 
 				if (from=="cart")
 					$("#shopping_cart_courses").load("/courses/show_cart");
 			}	
@@ -77,20 +79,33 @@
 			<tr id="cd_{%=cd.id%}" class="row" >
 				<td class="">
 					<p>
-						<a href="/courses/{%=cd.ct_id%}" class="course_name" target="_blank">
+						<a href="/courses/{%=cd.id%}" class="course_name" target="_blank">
 							{%= cd.course_name %}
 						</a>
 						{%= cd.dept_name %}
 						{%= cd.teacher_name %}
-						{% if(o.type=="search"){ %}
-							<button class="btn btn-success btn-circle pull-right" onclick="add_class({%=cd.id%},'add','search')">
-								<span class="glyphicon glyphicon-plus"></span>
-							</button>
-						{% }else if(o.type=="selected"){ %}
-							<button class="btn btn-warning btn-circle pull-right" onclick="add_class({%=cd.id%},'delete','search')">
-								<span class="glyphicon glyphicon-minus"></span>
-							</button>
+						{% if(o.view_type=="schedule"){ %}
+							{% if(o.use_type=="add"){ %}
+								<button class="btn btn-success btn-circle pull-right" onclick="addCourseSimulation({%=cd.id%},'add','search')">
+									<span class="glyphicon glyphicon-plus"></span>
+								</button>
+							{% }else if(o.use_type=="delete"){ %}
+								<button class="btn btn-warning btn-circle pull-right" onclick="addCourseSimulation({%=cd.id%},'delete','search')">
+									<span class="glyphicon glyphicon-minus"></span>
+								</button>
+							{% } %}
+						{% }else if(o.view_type=="session"){ %}
+							{% if(o.use_type=="add"){ %}
+								<button class="btn btn-success btn-circle pull-right" onclick="add_class({%=cd.id%},'add','search')">
+									<span class="glyphicon glyphicon-plus"></span>
+								</button>
+							{% }else if(o.use_type=="delete"){ %}
+								<button class="btn btn-warning btn-circle pull-right" onclick="add_to_cart({%=cd.id%},'delete')">
+									<span class="glyphicon glyphicon-minus"></span>
+								</button>
+							{% } %}
 						{% } %}
+						
 					</p>
 					<p class="text-right">
 						{% if(cd.cos_type=="通識"||cd.cos_type=="外語"){ %}
