--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 ﻿<div class="navbar navbar-inverse navbar-fixed-bottom " style="min-height:35px;">
 	<div class="container" >
 		<p class="navbar-text pull-left footer-text">© 2014 NCTU<sup>+</sup>交大網頁及系統優化小組
-		<a href="#" data-toggle="modal" data-target="#infoModal" style="margin-left:10px;">Contact Us</a>
+		<a href="#" data-toggle="modal" data-target="#global_modal" onclick="contactus();" style="margin-left:10px;">Contact Us</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;建議使用Chrome或FireFox瀏覽本站
 		</p>
 		
@@ -13,41 +13,12 @@
 	</div>
 </div>
 
-<div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title" >聯絡我們</h4>
-				<p>歡迎提出任何建議或是回報Bug，我們會盡快與您聯絡!</p>
-			</div>
-			
-			<%= form_tag '/main/send_report', :class=>"form-horizotal", :role=>"form", :remote=>"true" do %>
-				<div class="modal-body">
-				<div class="form-group ">
-					<% if current_user %>
-						<input type="text" class="form-control" name="report[name]" id="report_name" value="<%=current_user.name%>" readonly>
-					<% else %>
-						<input type="text" class="form-control" name="report[name]" id="report_name" placeholder="姓名..." required>
-					<% end %>	
-				</div>
-				<div class="form-group ">
-					<% if !current_user %>
-						<input type="text" class="form-control" name="report[email]" id="report_email" placeholder="Email..." required>
-					<% end %>
-				</div>
-				<div class="form-group ">
-						<textarea class="form-control" name="report[content]" id="report_content" rows="10" placeholder="內容..." required></textarea>
-				</div>
-			</div>
-				<div class="modal-footer">
-					<%= submit_tag "送出", :class=>"btn btn-primary" %>
-					<button type="button" class="btn btn-default" onclick="$('#report_content').val('')">重填</button>
-				</div>
-				</div>
-			<% end %>
-		
-	</div>
-</div>
+<script>
+	function contactus(){
+		$("#global_modal .modal-content").html(tmpl("contact_us"));
+	}
+</script>
+<%=render "/layouts/modal_content/xtmpl_footer_contactus"%>
+
 
 
