--- a/app/views/user/special_list.html.erb
+++ b/app/views/user/special_list.html.erb
@@ -46,7 +46,7 @@
 	<ul class="nav nav-tabs" style="/*margin-top:-15px;*/">
 		<li><a class="tab-link" id='toggle-a' href="#others" data-toggle="tab" url="/user/this_sem?uid=<%=params[:uid]%>" >本學期</a></li>
 		<li><a class="tab-link" id='toggle-b' href="#others" data-toggle="tab" url="/user/all_courses?uid=<%=params[:uid]%>">歷年課程</a></li>
-		<li><a class="tab-link" id='toggle-c' href="#others" data-toggle="tab" url="/user/statistics2?uid=<%=params[:uid]%>">畢業學分計算</a></li>
+		<li><a class="tab-link" id='toggle-c' href="#others" data-toggle="tab" url="/user/statistics?uid=<%=params[:uid]%>">畢業學分計算</a></li>
 	</ul>
 	<br>
 	<div class="tab-content" style="overflow:hidden;" id="gg">
