fix schedule and cart ver1.1

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -48,7 +48,7 @@
 <th class="col-md-"><%= sort_link @q,:grade, "年級" %>/<%= sort_link @q,:time, "時間" %></th>
 <th class="col-md-"><%= sort_link @q,:credit, "學分" %></th>
 <th class="col-md-">文章/檔案數</th>
-<th class="col-md-">點擊數</th>
+<th class="col-md-">人氣</th>
 <!--<th class="col-md-1"></th>-->
 </tr>
 
