--- a/app/views/user/statistics.html.erb
+++ b/app/views/user/statistics.html.erb
@@ -24,7 +24,7 @@
 
 <script>
 $(document).ready(function(){
-	$.getJSON("/user/statistics2?uid=<%=params[:uid] %>", function (data) {
+	$.getJSON("/user/statistics?uid=<%=params[:uid] %>", function (data) {
 		<% if @user.is_undergrad %>
 			$("#common_check_div").html(tmpl("common_check",data));
 		<% end %>
