--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,16 @@
 
 				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
 				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
-				
+		<!--		
+			<% if current_user and current_user.student_id %>	
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">歷年課表<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="#" rel="nofollow">asd<span class="badge pull-right">7</span></a></li>						
+					</ul>	
+				</li>
+			<% end %>	
+		-->	
       </ul>
 			
 			<ul class="nav navbar-nav navbar-right">			
