fix index url bug

--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -21,7 +21,7 @@
 					<td><%=fa_icon "bell" %> 時間</td>
     			<td><%=fa_icon "building" %> 教室</td>
     			<td><%=fa_icon "tag" %> 年級</td>					
-    			<td><%=fa_icon "bookmark" %> 備註</td>
+    			<td class="col-md-4"><%=fa_icon "bookmark" %> 備註</td>
     		</tr>
 				<% @cds.order("semester_id DESC").each do |cd| %>  
 					<tr>
