--- a/app/views/courses/course_table/_xtmpl_course_table.html.erb
+++ b/app/views/courses/course_table/_xtmpl_course_table.html.erb
@@ -40,7 +40,7 @@ function table_popover(){
 function add_time_slot(courses, isLastest, isSmallTable){
 	for(var i = 0 ; i < courses.length ; i++){
 		if(courses[i].time==""){//for 藝文賞析
-			console.log("藝文賞析");
+//			console.log("藝文賞析");
 			continue;
 		}	
 		var timearr = courses[i].time.match(/[0-9][A-Z]+/g);
