--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -46,7 +46,7 @@
 		
 			<div class="container icon-container" style="margin-left:30%;" >
 				<div class="row row-margin" >
-				<div class="circle clickable-hover" href="/course_details/">
+				<div class="circle clickable-hover" href="/courses/">
 					<%=fa_icon "search 5x" %>
 				</div>
 				</div>
@@ -56,7 +56,7 @@
 			</div>
 			<div class="container icon-container" >
 				<div class="row row-margin">
-				<div class="circle clickable-hover" href="/course_details/">	
+				<div class="circle clickable-hover" href="/courses/">	
 					<%=fa_icon "file-text-o 5x" %>
 					
 				</div>
