--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,16 +32,22 @@
 
 				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
 				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
-		<!--		
+				
 			<% if current_user and current_user.student_id %>	
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">歷年課表<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="#" rel="nofollow">asd<span class="badge pull-right">7</span></a></li>						
+						<% sems = current_user.course_simulations.pluck(:semester_id).uniq %>
+						<% if sems.count==0 %>
+						<li class="text-center">無資料</li>
+						<% end %>
+						<% sems.each do |sem| %>
+						<li><a href="javascript:void(0)" rel="nofollow" class="view-timetable" sem="<%=sem.to_s %>"><%=Semester.find(sem).name %></a></li>						
+						<% end %>
 					</ul>	
 				</li>
 			<% end %>	
-		-->	
+		
       </ul>
 			
 			<ul class="nav navbar-nav navbar-right">			
@@ -113,18 +119,11 @@
 		<% end %>
 		// small timetable
 		$("#sm_schd_button").click(
-			function(){				
-				$.getJSON("/user/get_courses?type=course_table&sem_id=<%=latest_semester.id%>",function(data){
-					$("#global_modal .modal-content").html('').append('<div class="modal-body"></div>');
-					$("#global_modal .modal-body").html(tmpl("course_table", data.semester_info));
-					table_popover(); 
-					
-					$("#small_timetable").html(tmpl("small_course_table"));
-					if(data.courses.length>0){
-						add_time_slot(data.courses, false, true);			//for small_timetable		
-						add_time_slot(data.courses, false, false);		//for timetable in modal
-					}	
-				});			
+			function(){	
+				var data = show_timetable_on_modal(<%=latest_semester.id%>, false);
+				$("#small_timetable").html(tmpl("small_course_table"));
+				if(data.courses.length>0)
+					add_time_slot(data.courses, false, true);			//for small_timetable		
 			}
 		);
 
@@ -137,8 +136,33 @@
 			}
 		);
 
+		//歷年課表
+		$(".view-timetable").click(function(){
+			show_timetable_on_modal($(this).attr("sem"), true);
+		});
 	
 	});
+	
+	function show_timetable_on_modal(semester_id, showNow){
+		var result=0 ;
+		$.ajax({
+			async: false, // This will make call synchronous
+			url: "/user/get_courses?type=course_table&sem_id="+semester_id,
+			dataType: "json",
+			success: function(data){
+				$("#global_modal .modal-content").html('').append('<div class="modal-body"></div>');
+				$("#global_modal .modal-body").html(tmpl("course_table", data.semester_info));
+				table_popover(); 	
+				if(data.courses.length>0)	
+					add_time_slot(data.courses, false, false);		//for timetable in modal
+				if(showNow)	
+					$("#global_modal").modal('show');	
+				result = data ;
+      }
+		});
+		return result ;
+	}
+
 	function add_to_cart(id,type){
 		$.ajax({
 			type: "GET",
