--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">歷年課表<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<% sems = current_user.course_simulations.pluck(:semester_id).uniq %>
+						<% sems = current_user.course_simulations.where("semester_id !=0").pluck(:semester_id).uniq %>
 						<% if sems.count==0 %>
 						<li class="text-center">無資料</li>
 						<% end %>
