--- a/app/views/courses/course_table/_xtmpl_small_course_table.html.erb
+++ b/app/views/courses/course_table/_xtmpl_small_course_table.html.erb
@@ -4,7 +4,7 @@
 <table class="table table-bordered no-margin-bottom" > 
 	<tr>
 		<td>
-			<%=fa_icon "search-plus",:onclick=>"$('#global_modal').modal('show');", :class=>" clickable-hover"%>
+			<%=fa_icon "search-plus",:onclick=>"$('#global_modal').modal('show');", :class=>" clickable-hover text-color-blue"%>
 		</td>
 		{% for(var i=0,day; day=days[i]; ++i){ %}
 			<td>{%=day%}</td>
