--- a/app/views/discusses/_discuss_form.html.erb
+++ b/app/views/discusses/_discuss_form.html.erb
@@ -17,7 +17,7 @@
 			<div class="col-md-11">
 			<br>
 			<input type="text" class="form-control" name="main_title" id="main_title" placeholder="標題..." style="" required>
-			<input type="hidden" value="<%=@ct_id%>" name="ct_id">
+			<input type="hidden" value="<%=@ct.id%>" name="ct_id">
 			</div>
 		<% else %>
 			<input type="text" class="form-control" id="main_title" placeholder="請先登入">
