--- a/app/views/discusses/_sub_discuss_form.html.erb
+++ b/app/views/discusses/_sub_discuss_form.html.erb
@@ -7,7 +7,7 @@
 	<div class="col-md-8">
 		<textarea class="form-control " name="sub_content" id="sub_content" rows="5" placeholder="內容..." required></textarea>
 		<input type="hidden" value="" name="reply_discuss_id" id="reply_discuss_id">
-		<input type="hidden" value="<%=@ct_id%>" name="ct_id" id="ct_id">
+		<input type="hidden" value="<%=@ct.id%>" name="ct_id" id="ct_id">
 	</div>
 	<div class="col-md-3" style="">
 		<p>
